--- a/partials/header.html
+++ b/partials/header.html
@@ -1,14 +1,15 @@
-<!-- header.html -->
-<header class="site-header">
-  <div class="container">
-    <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
-    <nav aria-label="Primary">
-      <button class="nav-toggle" aria-expanded="false" aria-controls="nav">Menu</button>
-      <ul id="nav" class="nav">
-        <li><a href="/">Home</a></li>
+<header class="header">
+  <div class="container header-inner">
+    <a href="/" class="logo">
+      <img src="/assets/img/snf_logo.png" alt="System & Flow" width="42" height="42" />
+      <span class="visually-hidden">System & Flow</span>
+    </a>
+    <nav class="nav">
+      <ul>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="/apps.html">Apps</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="/contact.html" class="button">Contact</a></li>
+        <li><a href="/about.html" aria-current="page">About</a></li>
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
