--- a/partials/header.html
+++ b/partials/header.html
@@ -1,14 +1,13 @@
-<header class="header">
-  <div class="container header-inner">
-    <a href="/" class="logo">
-      <img src="/assets/img/snf_logo.png" alt="System & Flow" width="42" height="42" />
-      <span class="visually-hidden">System & Flow</span>
+<header class="site-header">
+  <div class="container">
+    <a href="/" class="brand-wrap" aria-label="System & Flow homepage">
+      <img src="/assets/img/logo.png" alt="System & Flow Logo" />
+      <span class="brand">System & Flow</span>
     </a>
-    <nav class="nav">
-      <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/apps.html">Apps</a></li>
-        <li><a href="/about.html" aria-current="page">About</a></li>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="/">Home</a></li>
+        <li><a href="/apps.html">Tools</a></li>
         <li><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
